# KDSoap

./: .clang-format  .clazy  .codedocs  .codespellrc  .gitignore  .gitmodules  .krazy  .pre-commit-config.yaml  .pylintrc  .travis.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS.txt  CPackConfig.cmake  CPackIgnores.txt  Doxyfile  FindKDSoap.cmake  INSTALL-cmake.txt  INSTALL.txt  KDSoapConfig-buildtree.cmake.in  KDSoapConfig.cmake.in  KDSoapMacros.cmake  KDSoapMacros.cmake.in  LICENSE  LICENSE.AGPL3-modified.txt  LICENSE.GPL.txt  LICENSE.LGPL.txt  LICENSE.txt  README-commercial.txt  README.md  README.txt  REUSE.toml  add_license_blurb.sh  appveyor.yml  autogen.py  configure.bat  configure.bat.in  configure.py  configure.sh  configure.sh.in  (+20 more)
doc/api/: CMakeLists.txt  Doxyfile.cmake
docs/: CHANGES_1_1.txt  CHANGES_1_11.txt  CHANGES_1_3.txt  CHANGES_1_4.txt  CHANGES_1_5.txt  CHANGES_1_5_1.txt  CHANGES_1_6.txt  CHANGES_1_7.txt  CHANGES_1_8.txt  CHANGES_2_0.txt  CHANGES_2_1.txt  CHANGES_2_1_1.txt  CHANGES_2_2.txt  CHANGES_2_3.txt  CMakeLists.txt  kdsoap-server-design.odg
docs/api/: CMakeLists.txt  Doxyfile.cmake  doxygen.css  footer.html  header.html
docs/config/: footer.html  header.html
examples/: CMakeLists.txt  examples.pri  examples.pro
examples/bank_gui/: CMakeLists.txt  bank_gui.cpp  bank_gui.pro  mainwindow.cpp  mainwindow.h  resources.qrc
examples/bank_wsdl/: BLZService.wsdl  CMakeLists.txt  bank_wsdl.cpp  bank_wsdl.pro
examples/helloworld_client/: CMakeLists.txt  helloworld.wsdl  helloworld_client.h  helloworld_client.pro  main.cpp
examples/helloworld_server/: CMakeLists.txt  helloworld.wsdl  helloworld_server.h  helloworld_server.pro  helloworld_serverobject.cpp  helloworld_serverobject.h  main.cpp
examples/holidays/: holidays.cpp
examples/holidays_gui/: CMakeLists.txt  anim.mng  holidays.wsdl  holidays_gui.cpp  holidays_gui.pro  mainwindow.cpp  mainwindow.h  wsdl_holidays.h
examples/holidays_sync/: CMakeLists.txt  holidays.cpp  holidays_sync.pro
examples/holidays_wsdl/: CMakeLists.txt  holidays.cpp  holidays_wsdl.pro
kdwsdl2cpp/: CMakeLists.txt  kdwsdl2cpp.pro  kode_export.h
kdwsdl2cpp/common/: common.pro  fileprovider.cpp  fileprovider.h  messagehandler.cpp  messagehandler.h  nsmanager.cpp  nsmanager.h  parsercontext.cpp  parsercontext.h  qname.cpp  qname.h
kdwsdl2cpp/libkode/: README  class.cpp  class.h  code.cpp  code.h  enum.cpp  enum.h  file.cpp  file.h  function.cpp  function.h  libkode.pro  license.cpp  license.h  membervariable.cpp  membervariable.h  printer.cpp  printer.h  statemachine.cpp  statemachine.h  style.cpp  style.h  typedef.cpp  typedef.h  variable.cpp  variable.h
kdwsdl2cpp/schema/: annotation.cpp  annotation.h  attribute.cpp  attribute.h  attributegroup.cpp  attributegroup.h  complextype.cpp  complextype.h  compositor.cpp  compositor.h  element.cpp  element.h  group.cpp  group.h  parser.cpp  parser.h  schema.pro  schematest.cpp  simpletype.cpp  simpletype.h  types.cpp  types.h  xmlelement.cpp  xmlelement.h  xsdtype.cpp  xsdtype.h
kdwsdl2cpp/schemas/: schemas.qrc  soapenc-1.1.xsd  soapenc-1.2.xsd
kdwsdl2cpp/src/: compiler.cpp  compiler.h  converter.cpp  converter.h  converter_clientstub.cpp  converter_complextype.cpp  converter_element.cpp  converter_serverstub.cpp  converter_simpletype.cpp  converter_utils.cpp  creator.cpp  creator.h  elementargumentserializer.cpp  elementargumentserializer.h  kdwsdl2cpp.pro  kdwsdl2cpp_lib.pro  kwsdlcfg.xsd  main.cpp  namemapper.cpp  namemapper.h  settings.cpp  settings.h  src.pro  typemap.cpp  typemap.h
kdwsdl2cpp/wsdl/: CMakeLists.txt  TODO.old  abstractbinding.h  binding.cpp  binding.h  bindingoperation.cpp  bindingoperation.h  definitions.cpp  definitions.h  element.cpp  element.h  fault.cpp  fault.h  import.cpp  import.h  message.cpp  message.h  operation.cpp  operation.h  param.cpp  param.h  part.cpp  part.h  port.cpp  port.h  porttype.cpp  porttype.h  service.cpp  service.h  soapbinding.cpp  soapbinding.h  type.cpp  type.h  wsdl.cpp  wsdl.h  wsdl.pro
src/KDSoapClient/: CMakeLists.txt  KDDateTime.cpp  KDDateTime.h  KDQName.cpp  KDQName.h  KDSoap.h  KDSoapAuthentication.cpp  KDSoapAuthentication.h  KDSoapClient.pro  KDSoapClientInterface.cpp  KDSoapClientInterface.h  KDSoapClientInterface_p.h  KDSoapClientThread.cpp  KDSoapClientThread_p.h  KDSoapEndpointReference.cpp  KDSoapEndpointReference.h  KDSoapFaultException.cpp  KDSoapFaultException.h  KDSoapGlobal.h  KDSoapJob.cpp  KDSoapJob.h  KDSoapMessage.cpp  KDSoapMessage.h  KDSoapMessageAddressingProperties.cpp  KDSoapMessageAddressingProperties.h  KDSoapMessageReader.cpp  KDSoapMessageReader_p.h  KDSoapMessageWriter.cpp  KDSoapMessageWriter_p.h  KDSoapNamespaceManager.cpp  KDSoapNamespaceManager.h  KDSoapNamespacePrefixes.cpp  KDSoapNamespacePrefixes_p.h  KDSoapPendingCall.cpp  KDSoapPendingCall.h  KDSoapPendingCallWatcher.cpp  KDSoapPendingCallWatcher.h  KDSoapPendingCallWatcher_p.h  KDSoapPendingCall_p.h  KDSoapReplySslHandler.cpp  (+9 more)
src/KDSoapServer/: ByteArrayViewSplitter.h  CMakeLists.txt  KDSoapDelayedResponseHandle.cpp  KDSoapDelayedResponseHandle.h  KDSoapServer.cpp  KDSoapServer.h  KDSoapServer.pro  KDSoapServerAuthInterface.cpp  KDSoapServerAuthInterface.h  KDSoapServerCustomVerbRequestInterface.cpp  KDSoapServerCustomVerbRequestInterface.h  KDSoapServerGlobal.h  KDSoapServerObjectInterface.cpp  KDSoapServerObjectInterface.h  KDSoapServerRawXMLInterface.cpp  KDSoapServerRawXMLInterface.h  KDSoapServerSocket.cpp  KDSoapServerSocket_p.h  KDSoapServerThread.cpp  KDSoapServerThread_p.h  KDSoapSocketList.cpp  KDSoapSocketList_p.h  KDSoapThreadPool.cpp  KDSoapThreadPool.h  LICENSE.AGPL3.txt
testtools/: CMakeLists.txt  httpserver_p.cpp  httpserver_p.h  testtools.pro  testtools.qrc
testtools/certs/: README.txt  cacert.pem  cakey.pem  test-127.0.0.1-cert.pem  test-127.0.0.1-key.pem
unittests/: CMakeLists.txt  add_test_subdir.sh  lsan.sup  runTest.bat  unittests.pri  unittests.pro
unittests/QSharedPointer_include/: CMakeLists.txt  QSharedPointer_include.pro  test_qsharedpointer_include.cpp  (+1 more)
unittests/basic/: basic.cpp  (+3 more)
(+885 files in other folders)
